2021-05-07  Frédéric Wang  <fwang@igalia.com>

        Crash in InsertTextCommand::positionInsideTextNode
        https://bugs.webkit.org/show_bug.cgi?id=223753

        Reviewed by Ryosuke Niwa.

        Add regression test.

        * editing/deleting/selection-on-empty-table-row-expected.txt: Added.
        * editing/deleting/selection-on-empty-table-row.html: Added.

2021-05-06  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WinCairo] Unreviewed test gardening

        * platform/wincairo-wk1/TestExpectations:
        * platform/wincairo/TestExpectations:

2021-05-06  Tim Nguyen  <ntim@apple.com>

        Re-import css/mediaqueries/test_media_queries.html WPT
        https://bugs.webkit.org/show_bug.cgi?id=225469

        Unreviewed. Test gardening.

        Pulls in https://github.com/web-platform-tests/wpt/pull/28881 to fix device specific test failures.
        Also removes platform-specific test expectations which were added to that issue.

        * platform/gtk/imported/w3c/web-platform-tests/css/mediaqueries/test_media_queries-expected.txt: Removed.
        * platform/wpe/imported/w3c/web-platform-tests/css/mediaqueries/test_media_queries-expected.txt: Removed.

2021-05-06  Lauro Moura  <lmoura@igalia.com>

        [WPE] Garden a few more failures

        Unreviewed test gardening.

        * platform/wpe/TestExpectations:
        * platform/wpe/fast/inline/crash-when-revert-has-trailing-line-break-expected.txt: Added to keep
          testing whether the crash happens instead of skipping.
        * platform/wpe/fonts/sans-serif-expected.txt: Rebaseline after r275515.
        * platform/wpe/fonts/serif-expected.txt: Ditto.
        * platform/wpe/http/tests/cache/network-error-during-revalidation-expected.txt: Removed.
          Using DumpJSConsoleLogInStdErr instead to reuse root baseline.
        * platform/wpe/http/tests/xmlhttprequest/state-after-network-error-expected.txt: Ditto.