@@ -31,9 +31,12 @@ function testPlaysInline(requiresPlaysInline, hasPlaysInline, expectedDisplaying
         });
     })
     waitForEventOnce('playing', async () => {
-        if (expectedDisplayingFullscreen)
+        if (expectedDisplayingFullscreen) {
             await testExpectedEventually('internals.isChangingPresentationMode(video)', false);
 
+            // The GTK/WPE ports take a while to complete the fullscreen change. Wait until the next mainloop iteration.
+            await new Promise(resolve => setTimeout(resolve, 0));
+        }
         testExpected('video.webkitDisplayingFullscreen', expectedDisplayingFullscreen);
         document.body.removeChild(video);
         runNextTest();
