@@ -1,3 +1,14 @@
+2021-05-07  Enrique Ocaña González  <eocanha@igalia.com>
+
+        [GStreamer] Layout test media/video-playsinline.html is flaky
+        https://bugs.webkit.org/show_bug.cgi?id=186664
+
+        Reviewed by Philippe Normand.
+
+        The change to fullscreen takes a while on WebKitGTK and WPE platforms and can't be checked immediately.
+
+        * media/video-playsinline.html: Added a setTimeout to the test in order to defer the check to the next main loop iteration.
+
 2021-05-07  Frédéric Wang  <fwang@igalia.com>
 
         Crash in InsertTextCommand::positionInsideTextNode
